# secret_share

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  docker-compose.yml  run.md  secret_share.redb
.cargo/: config.toml
.github/workflows/: ci.yml
client/: Cargo.toml  index.html  index.j2  main.js
client/src/: app.rs  crypto.rs  lib.rs
client/static/: lit.css  main.js
client_seed/: Cargo.toml  askama.toml  index.html  index.j2
client_seed/src/: lib.rs  secret_share.rs
server/: .gitignore  Cargo.toml  askama.toml  askama_seed.toml
server/src/: entry.rs  main.rs  storage.rs
server/templates/: index.html  new_secret.html
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
