[package]
name = "secret_share"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
askama = "0.10"
serde = "1.0"
env_logger = "0.8"
acid-store = "0.6"

# use the following for binary size optimization:

# [profile.release]
# lto = true
# opt-level = 'z'
# codegen-units = 1
# panic = 'abort'

# also run strip, sstrip and
# upx --best --lzma
# to reduce the size even further
# or upx --brute