[package]
name = "client"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
yew = "0.19.3"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"
magic-crypt = "3.1.10"
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.8.5" }
web-sys = { version = "0.3.60", features = [
    "Clipboard",
    "Navigator",
    "Window",
    "CssStyleDeclaration",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "Url",
    "InputEvent",
    "DataTransfer"
] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
if_chain = "1.0.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
gloo-net = "0.2.4"
serde-wasm-bindgen = "0.4"

shared = { path = "../shared" }
