[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = "1.0.228"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.23.5", features = ["serde", "v4", "js"] }
rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }
hex = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.103", features = [
    "AesGcmParams",
    "Clipboard",
    "Crypto",
    "CryptoKey",
    "SubtleCrypto",
    "Navigator",
    "Window",
    "Url",
    "Document",
    "Element",
    "Blob",
    "File",
    "FileList",
    "DataTransfer",
    "DragEvent",
    "HtmlInputElement",
] }
wasm-bindgen-futures = "0.4.76"
byte-unit = "5"
gloo-net = "0.7"
gloo-file = { version = "0.4", features = ["futures"] }

shared = { path = "../shared" }
