[package]
name = "client_seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.9.2"
serde = "1.0.145"
serde-wasm-bindgen = "0.4"
askama = "0.11.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
magic-crypt = "3.1.10"
rand = { version = "0.8.5" }
web-sys = { version = "0.3.60", features = [
    "Clipboard",
    "Navigator",
    "Window",
    "Url",
] }
wasm-bindgen-futures = "0.4.33"
byte-unit = "4.0.14"

shared = { path = "../shared" }