[package]
name = "client_seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.10"
serde = "1.0.145"
serde-wasm-bindgen = "0.6"
askama = "0.16"
uuid = { version = "1.1.2", features = ["serde", "v4", "js"] }
rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }
web-sys = { version = "0.3.60", features = [
    "Clipboard",
    "Navigator",
    "Window",
    "Url",
    "Document",
    "Element",
    "Blob",
    "ReadableStream",
    "File",
    "FileList",
    "DataTransfer"
] }
wasm-bindgen-futures = "0.4.33"
byte-unit = "5"
gloo-net = "0.7"
chacha20poly1305 = "0.11"
gloo-file = "0.4"
wasm-streams = "0.6"
futures-util = "0.3.25"

shared = { path = "../shared" }
