[package]
name = "secret_share"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
askama = "0.13.0"
serde = "1.0.145"
serde_json = "1.0.85"
env_logger = "0.11"
redis = { version = "0.22.1",  features = ["aio", "async-std-comp"] }
uuid = "1.1.2"
lazy_static = "1.4.0"
bcrypt = "0.13.0"
anyhow = "1.0.65"
byte-unit = "4.0.14"
rand = "0.8.5"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "rand_core"] }

shared = { path = "../shared"}