[package]
name = "secret_share"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
askama = "0.16"
serde = "1.0.145"
serde_json = "1.0.85"
env_logger = "0.11"
uuid = "1.1.2"
lazy_static = "1.4.0"
bcrypt = "0.19"
anyhow = "1.0.65"
byte-unit = "5"

shared = { path = "../shared"}
redb = "4.1.0"
