[package]
name = "secret_share"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.14.0"
actix-files = "0.6.10"
askama = "0.16"
serde = "1.0.228"
serde_json = "1.0.150"
env_logger = "0.11"
uuid = "1.23.5"
bcrypt = "0.19"
anyhow = "1.0.103"
byte-unit = "5"

shared = { path = "../shared"}
redb = "4.1.0"
