[package]
name = "shared"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }