[package]
name = "shared"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }