[package]
name = "shared"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@gmx.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.5", features = ["serde", "v4"] }
hex = "0.4.3"
base64 = "0.22.1"
